# budget-app

./: .gitignore  README.md  index.html  package-lock.json  package.json
.cursor/rules/: git-github-sync.mdc
Test Budget Files/: test budget 1.budget
design/: logo-preview.html
plans/: app-tsx-decomposition.md  decomposition-progress.md
scripts/: export-wordmark-png.mjs  seed_ben_z.py
src/: App.css  App.tsx  money.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  period.rs  settings.rs
src/app/ipc/: commands.ts  events.ts  index.ts
src/app/state/: index.ts  useMenuListeners.ts  useSyncedRef.ts
src/components/: ErrorBoundary.tsx
src/components/icons/: CalendarIcon.tsx  ListIcon.tsx  LockIcon.tsx  NewWindowIcon.tsx  PencilIcon.tsx  PlusIcon.tsx  TrashIcon.tsx  index.ts
src/components/modals/: BucketReorderModal.css  BucketReorderModal.tsx  ConfirmDeleteRowModal.tsx  CreateYearModal.tsx  DeleteWorkspaceConfirmModal.tsx  DeleteYearConfirmModal.tsx  DuplicateYearModal.tsx  ExpenseLineEditModal.css  ExpenseLineEditModal.tsx  OpenInWindowModal.tsx  PasswordModal.tsx  PreferencesModal.css  PreferencesModal.tsx  RenameWorkspaceModal.tsx  RenameYearModal.tsx  UnsavedChangesModal.css  useModalFocusTrap.ts  (+1 more)
src/views/: BudgetDashboard.tsx  CrossYearView.tsx  LibraryView.tsx  MonthlyBarsChart.tsx  ReportsView.tsx  WelcomeScreen.tsx  YearEndNudge.tsx  YearOverviewView.tsx  YtdDualStrip.tsx  YtdSlideOver.tsx  helpers.ts  index.ts
(+21 files in other folders)
