[package]
name = "mimo"
version = "0.1.0"
description = "mimo — Money In, Money Out. Local-first Mac budgeting app."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mimo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Default ships an unencrypted SQLite via rusqlite's bundled feature so CI
# and contributor builds keep working without an OpenSSL toolchain on the
# machine. Enabling `encryption` swaps in a SQLCipher-capable rusqlite
# (also bundled, with vendored OpenSSL) so production builds can offer
# password protection without requiring the user to install dependencies.
default = ["sqlite"]
sqlite = ["rusqlite/bundled"]
encryption = ["rusqlite/bundled-sqlcipher-vendored-openssl"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32" }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
chrono = "0.4"

